slogan update, team update (more to come)

--- a/style.css
+++ b/style.css
@@ -12,3 +12,12 @@
   width: 75vh;
 }
 }
+
+.card figure {
+  height: 325px;
+}
+
+.fillbg {
+  background-size: cover;
+  background-position: center;
+}
