--- a/style.css
+++ b/style.css
@@ -7,6 +7,21 @@
     max-width: 37vh;
 }
 
+
+.bg {
+  background-image: url("bird.png");
+  background-repeat: repeat;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-size: 200px;
+  width: 100%;
+  height: 100%;
+  opacity: .15;
+}
+
 @media only screen and (min-width: 1080px) {
 .wide-on-big-screen {
   width: 75vh;
