--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
   background-size: 200px;
   width: 100%;
   height: 100%;
-  opacity: .15;
+  opacity: 0;
 }
 
 @media only screen and (min-width: 1080px) {
