--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
     max-width: 37vh;
 }
 
+@media only screen and (min-width: 1080px) {
+  .grid {
+    width: 125px;
+  }
+}
+
 
 .bg {
   background-image: url("bird.png");
