--- a/style.css
+++ b/style.css
@@ -31,6 +31,15 @@ h5, h6, small, i, p, a, button, label {
   --primary-bg: #5938fa;
   --secondary-text: #5938fa;
   --light-text: rgb(255, 255, 255);
+  --secondary-bg: #ffc06e;
+}
+
+button:hover {
+  background-color: var(--secondary-bg);
+}
+
+button.noorange:hover {
+  background-color: white;
 }
 
 .hero {
@@ -81,10 +90,37 @@ button a {
 
 section { 
   padding: 3rem 0;
-  height: 50vh;
+  min-height: 50vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  background-color: transparent;
+  z-index: 10;
+}
+
+#section2_bg {
+  background-image: url('section2.svg');
+  background-size: cover;
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  height: 115vh;
+  width: 100vw;
+  position: absolute;
+  left: 0;
+  z-index: -1;
+}
+
+#section3_bg {
+  background-image: url('section3.svg');
+  background-size: cover;
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  height: 155vh;
+  margin-top: 10rem;
+  width: 100vw;
+  position: absolute;
+  left: 0;
+  z-index: -1;
 }
 
 .flex {
@@ -97,4 +133,31 @@ section {
 
 section img {
   width: 250px;
+}
+
+.grid-3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+}
+
+.card {
+  border-radius: 6px;
+  background-color: var(--primary-bg);
+  color: white;
+}
+
+.card h2 {
+  color: white;
+}
+
+.card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  object-position: top;
+  border-radius: 6px;
+  position: relative;
+  top: 0;
+  left: 0;
 }
