--- a/style.css
+++ b/style.css
@@ -381,3 +381,17 @@ footer a:hover {
     font-size: 1.5rem;
   }
 }
+
+#money-overlay {
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+  flex-direction: column;
+}
